--- a/styles.css
+++ b/styles.css
@@ -14,6 +14,7 @@ body {
   font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
     "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
   overflow-x: hidden;
+
 }
 
 /* Header styles */
@@ -185,6 +186,7 @@ body {
   }
   .container .title{
     font-size: 2rem;
+    
   }
 }
 
@@ -277,7 +279,7 @@ body {
 }
 
 /* Formula block styling */
-#theory code, #procedure code, #result code {
+#theory code, #procedure code, #result code, #practice code{
   display: inline-block;
   background-color: #eef1f4;
   color: #2d3436;
@@ -776,3 +778,76 @@ input[type="radio"] {
       margin-bottom: 5px;
       color: #444;
     }
+
+
+
+
+
+
+
+
+
+
+
+
+
+/*Style for images in example tab*/
+  
+.image-row {
+  display: flex;
+  justify-content: space-between;
+  gap: 20px;
+  flex-wrap: wrap;
+  margin: 20px 50px;
+}
+
+.image-row img {
+  max-width: 100%;
+  width: 48%;
+  height: auto;
+  border: 1px solid #ccc;
+  border-radius: 8px;
+  box-shadow: 0 2px 6px rgba(0,0,0,0.1);
+  object-fit: contain;
+}
+
+/* Style for step comaprison */
+.processing-step {
+  margin: 30px 0 15px;
+  font-weight: bold;
+  font-size: 18px;
+  color: #2c3e50;
+  border-left: 4px solid #3498db;
+  padding-left: 10px;
+}
+
+.step-comparison {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  gap: 20px;
+}
+
+.step-box {
+  flex: 1 1 48%;
+  background-color: #f9f9f9;
+  padding: 15px 20px;
+  border: 1px solid #ddd;
+  border-radius: 8px;
+  box-shadow: 0 2px 5px rgba(0,0,0,0.05);
+}
+
+.step-box p {
+  margin: 0;
+  font-size: 14px;
+  color: #333;
+  text-align: left;
+}
+
+.step-box code {
+  background-color: #f0f0f0;
+  padding: 6px 8px;
+  display: inline-block;
+  border-radius: 4px;
+  font-family: 'Courier New', monospace;
+}
